// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Metrics Actions fetch Bounce Classifications 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {},
      "url": "/v1/metrics/deliverability/bounce-classification",
    },
    "type": "FETCH_METRICS_BOUNCE_CLASSIFICATIONS",
  },
]
`;

exports[`Metrics Actions fetch Bounce Reasons 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {},
      "url": "/v1/metrics/deliverability/bounce-reason",
    },
    "type": "FETCH_METRICS_BOUNCE_REASONS",
  },
]
`;

exports[`Metrics Actions fetch Bounce Reasons By Domain 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {},
      "url": "/v1/metrics/deliverability/bounce-reason/domain",
    },
    "type": "FETCH_METRICS_BOUNCE_REASONS_BY_DOMAIN",
  },
]
`;

exports[`Metrics Actions fetch Delay Reasons By Domain 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {},
      "url": "/v1/metrics/deliverability/delay-reason/domain",
    },
    "type": "FETCH_METRICS_DELAY_REASONS_BY_DOMAIN",
  },
]
`;

exports[`Metrics Actions fetch Deliverability 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {},
      "url": "/v1/metrics/deliverability",
    },
    "type": "GET_ACCEPTED_AGGREGATES",
  },
]
`;

exports[`Metrics Actions fetch Deliveries By Attempt 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {},
      "url": "/v1/metrics/deliverability/attempt",
    },
    "type": "FETCH_METRICS_DELIVERIES_BY_ATTEMPT",
  },
]
`;

exports[`Metrics Actions fetch Rejection Reasons By Domain 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {},
      "url": "/v1/metrics/deliverability/rejection-reason/domain",
    },
    "type": "FETCH_METRICS_REJECTION_REASONS_BY_DOMAIN",
  },
]
`;

exports[`Metrics Actions fetch metrics (time series) 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {},
      "url": "/v1/metrics/deliverability/time-series",
    },
    "type": "FETCH_METRICS",
  },
]
`;

exports[`Metrics Actions fetch metrics campaigns 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {},
      "url": "/v1/metrics/campaigns",
    },
    "type": "FETCH_METRICS_CAMPAIGNS",
  },
]
`;

exports[`Metrics Actions fetch metrics domains 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {},
      "url": "/v1/metrics/domains",
    },
    "type": "FETCH_METRICS_DOMAINS",
  },
]
`;

exports[`Metrics Actions fetch metrics ip pools 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {},
      "url": "/v1/metrics/ip-pools",
    },
    "type": "FETCH_METRICS_IP_POOLS",
  },
]
`;

exports[`Metrics Actions fetch metrics sending ips 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {},
      "url": "/v1/metrics/sending-ips",
    },
    "type": "FETCH_METRICS_SENDING_IPS",
  },
]
`;

exports[`Metrics Actions fetch metrics templates 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {},
      "url": "/v1/metrics/templates",
    },
    "type": "FETCH_METRICS_TEMPLATES",
  },
]
`;
